2009-01-24  Hans Breuer  <hans@breuer.org>

	* app/confirm.[ch] : new function confirm_export_size() which let's the
	user confirm an unusal diagram size
	* app/Makefile.am app/makefile.msc po/POTFILES.in : add new files
	* app/commands.c app/filedlg.c : use it before export and print to avoid
	possibly unintended numbers of pages printed or memory used for export.
	(Bug #540477, Martin Wegner)

	app/preferences.[ch] : removed obsolete print preference

	* objects/SISSI/area.c objects/SISSI/faraday.c objects/SISSI/room.c
	  objects/SISSI/sissi.[ch] objects/SISSI/sissi_dialog.c
	  objects/SISSI/sissi_object.c objects/SISSI/site.c : fixed object
	method DiaObject::apply_props_from_dialog() for the last known issue
	with changing multiple objects properties, bug #60331
	(It did not crash because the SISSI object don't contribute anything
	to the property list.)
	* objects/SISSI/sissi_object.c(280) : local variable 'filename' used
	without having been initialized
	* objects/SISSI/sissi_dialog.c(380) : incompatible types - from 
	'struct _GtkWidget *' to 'struct _GtkScrolledWindow *'

	[
	  One menu entry File/Print is enough. The not any longer experimental
	  cairo plug-in together with GtkPrint from gtk+-2-12 and cairo-1- or 
	  above superseds both former print facilities. 
	]
	* app/menus.[ch] : introduce /InvisibleMenu as target for known actions
	registered from plug-ins supposed to be available only once. Currently
	there is just one of these actions "FilePrint" which gets routed to
	FilePrintGTK, FilePrintGDI or FilePrintPS in that order, i.e. depending
	on the plug-ins being loaded
	* plug-ins/cairo/diacairo.c plug-ins/postscript/postscript.c
	  plug-ins/wmf/wmf.cpp : register print actions to invisible menu

	* shapes/Civil/civil_basin.shape shapes/Civil/civil_motor.shape : 
	foreground for stroke

	* objects/UML/class_dialog.c(umlclass_dialog_free) : avoid double free
	of the dialog struct. Is is already destroyed by destroy-signal
	Fixes bug #569013
