@@ -8,7 +8,8 @@ G_BEGIN_DECLS
 enum DiaInitFlags
 {
   DIA_INTERACTIVE = (1<<0),
-  DIA_MESSAGE_STDERR = (1<<1)
+  DIA_MESSAGE_STDERR = (1<<1),
+  DIA_VERBOSE = (1<<2)
 };
 
 void libdia_init (guint flags);
